Fixed wrong padding, deleted console.log

--- a/components/FeaturesSection/FeaturesSection.module.scss
+++ b/components/FeaturesSection/FeaturesSection.module.scss
@@ -8,7 +8,7 @@
     @media all and (max-width: $screen-lg) {
       padding: 5rem 2.75rem;
     }
-    @media all and (max-width: $screen-xxs-plus) {
+    @media all and (max-width: $screen-xs-plus) {
       padding: 5rem 1rem;
     }
     .titleContainer {
